# dp-game

./: Cargo.toml
assets/contracts/: Gold.json  Sword.json
assets/maps/: 01.json
src/: components.rs  lib.rs  main.rs  systems.rs
src/common/: components.rs  systems.rs
src/map/: mod.rs  resources.rs  systems.rs
src/player/: systems.rs
src/score/: components.rs  systems.rs
src/ui/: systems.rs
