[package]
name = "dp-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_dylib = { version = "0.14.2" }
bevy = { version = "0.14.2", features = ["dynamic_linking", "async-io"] }
log = { version = "*", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_fast_tilemap = { git = "https://github.com/Droggelbecher/bevy-fast-tilemap.git" }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "2.0.3"
env_logger = "0.11.5"
bevy-tokio-tasks = "0.14.0"
alloy = { version = "0.6.4", features = [
    "full",
    "eips",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
alloy-sol-types = "0.8.13"
alloy-contract = "0.6.4"
tokio = "1.41.1"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
